2851 [Chapter Creator]      added fps selector for the input source
                            changing the input fps changes the time codes if the input fps is not known (e.g. as with TXT/XML)
                            the output fps value is used during saving for all output types
                            new chapters are sorted based on time codes
                            double click on a chapter jumps to the positions if the preview pane is open
                            preview button asks for an AVS file
                            added option to use an automated counter for chapters (enabled by default)
                            if the "Start Time" value is in a wrong format the text color is changed to red
                            the Chapter Creator window stays on top of the video preview window 
2850 [HD Streams Extractor] added support for EAC3 in files
                            "Custom Options" setting will be saved
2849                        scripts with high bit depth are converted to 8 bit when processed internally (e.g. for VideoPlayer). part II
2848                        scripts with high bit depth are converted to 8 bit when processed internally (e.g. for VideoPlayer)
2847 [AviSynth Wrapper]     added high bit depth support
2846 [Audio Encoder]        only use TimeStretchPlugin() if AVS+ is not used
2845 [MP4 Muxer]            fixed missing MediaInfo of output file if the extension is m4v/m4a
                            fixed missing prompt if an existing m4v/m4a file should be overwritten
2844 [OneClick]             fixed cleanup job not to fail anymore if the input file does not exist (regression of 2825). bug #913
2843 [AVS / Audio Cutter]   fixed cut length off by one frame. bug #912
2842 [Main]                 improved logging if a profile/setting cannot be loaded. bug #910
2841 [OneClick]             fixed audio track processing for some file types if DG* indexer is used (e.g. VOB without IFO)